--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,13 @@
 
 body {
     height: 100vh;
+    background-color: #171b22;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 div#pagina {
     max-width: 1100px;
+    color: #fff;
     height: 100%;
     margin: auto;
 }
@@ -28,10 +30,10 @@ a:hover {
 /* Configurações da parte de menu */
 header.menu {
     display: flex;
-    flex-direction: row;
+    min-height: 100px;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100px;
+    justify-content:center;
     border-bottom: #b3b3b3 2px solid;
 }
 
@@ -40,9 +42,40 @@ header.menu h1 {
     text-transform: uppercase;
 }
 
+/* configurar botões do menu abaixo do titulo do site */
+
+header.menu nav {
+    display: flex;
+    margin-top: 20px;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+}
+
+header.menu nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+header.menu nav ul li {
+    margin: 0 10px;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+header.menu nav ul li:hover {
+    cursor: pointer;
+    background-color: #3a3f47;
+    color: crimson;
+}
+
 /* Configurações do corpo da página */
 
-section.conteudo {
+section#conteudo {
     min-height: calc(100% - 150px);
     display: flex;
     flex-flow: row wrap;
@@ -51,6 +84,7 @@ section.conteudo {
 }
 
 div.caixa-conteudo {
+    background-color: #3a3f47;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,7 +127,7 @@ div.caixa-conteudo input:focus {
 }
 
 div.caixa-conteudo .botao {
-    margin: 5px 10px;
+    margin: 5px 0;
     width: 100%;
     padding: 4px;
     background-color: #000;
@@ -116,8 +150,9 @@ div.caixa-conteudo h2 {
     text-transform: uppercase;
 }
 
-div.caixa-conteudo #resultado {
+div.caixa-conteudo .resultado {
     background-color: blanchedalmond;
+    color: #000;
     width: 100%;
     min-height: 45px;
     padding: 3px;
@@ -141,12 +176,4 @@ footer {
 footer h1 {
     font-size: 20px;
     color: #555;
-}
-
-footer span {
-    color: crimson;
-}
-
-footer a {
-    color: #000;
 }
